Made the library java 8 compatible.